# SaveSyncd

./: Cargo.toml  Dockerfile  README.md  docgen-watch.sh  docgen.sh  flake.nix
.github/workflows/: build.yml  create_tag.yml  docker-publish.yml  docs.yml  test_build.yml
docs/: savesyncd.yaml
docs/v1/: status.yaml  titles.yaml
docs/v1/components/: ClientFileInfo.yaml  Container.yaml  FileAction.yaml  FileInfo.yaml  ServerFileInfo.yaml  Ticket.yaml  TitleID.yaml
docs/v1/download/: begin.yaml  cancel.yaml  end.yaml  file.yaml
docs/v1/upload/: begin.yaml  cancel.yaml  end.yaml  file.yaml
nix/: container.nix  module.nix  package.nix
src/: config.rs  main.rs  tray_app.rs
src/versions/v1/: file_info.rs  mod.rs  ticket.rs  titles.rs
src/versions/v1/download/: begin.rs  end.rs  file.rs  mod.rs
src/versions/v1/upload/: begin.rs  cancel.rs  end.rs  file.rs  mod.rs
