[package]
name = "SaveSyncd"
version = "0.1.0"
edition = "2021"

[dependencies]
ws = { package = "rocket_ws", version = "0.1.1" }
glob = "0.3.2"
rocket = { version = "0.5.1", features = [ "json" ]}
serde = "1.0.219"
serde_json = "1.0.142"
sha256 = "1.6.0"
uuid = { version = "1.18.1", features = [ "v4" ] }
dirs = "6.0.0"
fs_extra = "1.3.0"
md5 = "0.8.0"
